2007-09-28  Sebastian Marsching  <sebastian.marsching@1und1.de>
	
	* projects/core/editor2/conf/scriptedflows/selectinclude.xsl: 
	* projects/core/editor2/conf/edit.conf.xml: 
	* projects/core/xsl/include.xsl: 
	* projects/core/xsl/include_xslt2.xsl: 
	Replaced auxhandler for include part selection with scripted flow in
	preparation for the removal of auxhandler support.
	
	* src/de/schlund/pfixxml/ContextXMLServlet.java: 
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: 
	Moved the URL redirection code from context to servlet in order to make it work
	with scripted flows. However, SSL redirect handling is still managed in the 
	context. 	
	
	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
	Implemented HttpSessionBindingListener to change session object stored in
	SessionContextImpl when context is bound to another session (e.g. on SSL switch)

2007-09-19  Martin Leidig  <mleidig@schlund.de>

	* skel/build-skel.xml: change junit task error behaviour: now halt
	on failures and errors instead of errors only.

2007-09-19  Martin Leidig  <mleidig@schlund.de>

	* projects/core/script/webservice.js: allow Null values for
	bean properties
	* projects/webservice/htdocs/typetest-pfxsoap.js: add new
	tests for Null values

2007-09-18  Martin Leidig  <mleidig@schlund.de>

	* projects/core/script/webservice.js: support Null values for 
	Date and Calendar objects (bugfix)

2007-09-12  Martin Leidig  <mleidig@schlund.de>

	Improved extension function exception handling: Due to an 
	unfortunate implementation of Saxon's FunctionProxy only 
	the exception message and no stacktrace or cause of an error, 
	occurred within an extension function, is available in the 
	resulting TransformerException. Using the ExtensionFunctionUtils
	class an extension function can catch its exceptions and store 
	it threadlocally calling the method setExtensionFunctionError. 
	Later, during exception handling, the  exception can be retrieved 